# academia-jedi

./: .gitignore  .pre-commit-config.yaml  README.md  config.py  pyproject.toml  ruff.toml  settings.toml
.github/ISSUE_TEMPLATE/: custom.md  new-task-template.md
.github/workflows/: gwa-release.yml
credentials/: .gitignore
data_files/: estados_br.json
data_files/csv/: aniversariantes.csv
data_files/json/: municipios_br.json
incolume/: __init__.py
incolume/academia_jedi/: __init__.py  version.txt
incolume/academia_jedi/2022-07-28_crud_nodb/: cli.py  tests.py
incolume/academia_jedi/2022-08-01_Dockerfile_apache/: Dockerfile  index.html
incolume/academia_jedi/2022-08-01_crud_sqlite/: basedados.py
incolume/academia_jedi/2022-08-01_ojs/: Dockerfile  compose.yml
incolume/academia_jedi/2022-08-07_docker_mssql/: compose.yml
incolume/academia_jedi/2022-08-07_docker_mysql/: README.md
incolume/academia_jedi/2022-08-15_pytest_doctest/: new_point.py  point.py
incolume/academia_jedi/2022-08-16_docker_python_pgsql/: compose.yml  dotenv
incolume/academia_jedi/2022-08-17_docker_ojs_pgsql/: compose.yml  dotenv
incolume/academia_jedi/2022-08-18_docker_ojs_local_vol/: compose.yml
incolume/academia_jedi/2022-08-19_docker_ojs_rjp_hom_recover/: compose.yml
incolume/academia_jedi/2022-08-22_docker_ojs_update_php8/: compose.yml
incolume/academia_jedi/2022-08-24_docker_ojs_php7_psql/: compose.yml
incolume/academia_jedi/2022-08-29_docker_ojs_php7_psql/: compose.yml
incolume/academia_jedi/2022-08-30_docker_ojs_php7_psql/: compose.yml  dotenv
incolume/academia_jedi/2022-08-31_docker_ojs/: Dockerfile  compose.yml  dotenv
incolume/academia_jedi/20220728_crud_nodb/: cli.py
incolume/academia_jedi/20220729_click/: README.md  context.py  exemplo02.py
incolume/academia_jedi/20220731_sgbd_pandas/: main.py
incolume/academia_jedi/20220801_crud_sqlite/: model.py
incolume/academia_jedi/20220801_ojs/: dotenv
incolume/academia_jedi/20220806_docker_stack/: compose.yml
incolume/academia_jedi/20220807_docker_mariadb/: compose.yml
incolume/academia_jedi/20220807_docker_mysql/: compose.yml
incolume/academia_jedi/20220816_docker_python_pgsql/: compose.yml
incolume/academia_jedi/20220818_docker_ojs_local_vol/: docker-compose-local.yml
incolume/academia_jedi/20220822_docker_ojs_update_php8/: compose.yml
incolume/academia_jedi/20220824_docker_ojs_php7_psql/: compose.yml
incolume/academia_jedi/20220918_proxy_2_python/: proxy_python.py
incolume/academia_jedi/20220918_raspagem_lista_proxies/: raspagem_proxies.py
incolume/academia_jedi/20220924_dynaconf/: README.md  app.py  config.py  main.py  settings.toml
incolume/academia_jedi/20220924_jogo_da_forca/: jogo_da_forca.py  palavras.toml
incolume/academia_jedi/20220924_massa_dados/: generator_pessoas.py  models.py
incolume/academia_jedi/20220924_python_dotenv/: app.py
incolume/academia_jedi/20220925_massa_dados_faker_protocol/: generator_pessoas.py  models.py
incolume/academia_jedi/ajedi20220728_crud_nodb/: README.md  basedados.py  cli.py  control.py  main.py  model.py  test_ajedi20220728_crud_nodb.py  tests.py
incolume/academia_jedi/ajedi20220729_click/: context.py  exemplo01.py  exemplo02.py  tools.py  tools1.py
incolume/academia_jedi/ajedi20220731_sgbd_pandas/: main.py  sgbd_pandas_test.py
incolume/academia_jedi/ajedi20220801_crud_sqlite/: basedados.py  cli.py  control.py  main.py  model.py  tests.py
incolume/academia_jedi/ajedi20220801_ojs/: docker-compose0.yml
incolume/academia_jedi/ajedi20220807_docker_pgsql/: compose.yml  dotenv
incolume/academia_jedi/ajedi20220815_pytest_doctest/: new_point.py  point.py
incolume/academia_jedi/ajedi20220817_docker_ojs_pgsql/: compose.yml
incolume/academia_jedi/ajedi20220829_docker_ojs_php7_psql/: dotenv
incolume/academia_jedi/ajedi20220830_docker_ojs_php7_psql/: compose.yml
incolume/academia_jedi/ajedi20220831_docker_ojs/: docker-compose-local.yml
incolume/academia_jedi/ajedi20220918_proxy_2_python/: access_proxies.ipynb  proxy_python.py
incolume/academia_jedi/ajedi20220918_raspagem_lista_proxies/: RaspagemProxies.ipynb  raspagem_proxies.py
incolume/academia_jedi/ajedi20220924_dynaconf/: __init__.py  app.py  config.py  main.py  settings.toml  test_app.py
incolume/academia_jedi/ajedi20220924_massa_dados/: generator_pessoas.py  models.py
incolume/academia_jedi/ajedi20220924_python_dotenv/: app.py
incolume/academia_jedi/ajedi20220925_arquivos_csv/: handler_csv.py
incolume/academia_jedi/ajedi20220925_massa_dados_faker_protocol/: generator_pessoas.py  models.py
incolume/academia_jedi/ajedi20220926_arquivos_json/: handler_json.py
incolume/academia_jedi/ajedi20220926_arquivos_pickle/: handle_pickle.py
incolume/academia_jedi/ajedi20220926_pandas_write_files/: handle_pandas_files.py
incolume/academia_jedi/ajedi20220927_docker_ojs_php7_psql/: docker-compose-oficial.yml
incolume/academia_jedi/ajedi20220928_morsa_op/: main.py
incolume/academia_jedi/ajedi20220928_regex/: app.py  tests.py
incolume/academia_jedi/ajedi20221002_date_json_files/: handler_json.py  handler_json_1.py
incolume/academia_jedi/ajedi20221003_datetime_milliseconds/: handler_datetime.py  test_handler_datetime.py
incolume/academia_jedi/ajedi20221004_enum/: examples.py
incolume/academia_jedi/ajedi20221004_hidden_password/: app.py
incolume/academia_jedi/ajedi20221005_python311_docker/: compose.yml  main.py  run.py
incolume/academia_jedi/ajedi20221006_fpdf/: orcamento.ipynb  orçamento.ipynb
ipynb/: RaspagemProxies.ipynb  access_proxies.ipynb  api_pokemon.ipynb  brasileiros_estados.ipynb  brasileiros_municipios.ipynb  compose.yml  empowerdata-automação.ipynb  empowerdata-genDataAnalise.ipynb  issue#8.ipynb  method_overload.ipynb  pony_orm.ipynb  stack-bd.yml
pynb/: Untitled.ipynb  compose.yml
requirements/: prod.txt
tests/: __init__.py  conftest.py  models_indirect_fixture_tests.py  test_ajedi20220728_crud_nodb.py  test_ajedi20231002_python_string.py  test_ajedi20231004_largest_sum_continuous_subarray_pythonico.py  test_others.py  test_semver.py
(+651 files in other folders)
